  DbConnection.connected field removed
  EntityUtil.hashKeysByEntityID() added
  PropertyCriteria.getForeignKeyCriteriaValues() and getMultipleColumnForeignKeyCriteriaValues() added
  EntityDbPreparedConnection added
  Configuration.USE_PREPARED_CONNECTIONS added
  EntityKeyCriteria now extends CriteriaSet and delegates to PropertyCriteria
  Criteria generified
  Criteria.getTypes() removed
  Criteria.getValueKeys() added
  EntityCriteria.getTypes() renamed to getValueProperties()
  EntityDbPreparedConnection.setStatementValue() now handles the specific case of Property.BooleanProperty
  EntityUtil.getRandomValue() now handles value list properties correctly
  Entity.Key.isCompositeKey() added
  Entity.Key.hashCode() improved
  Entity.addInsertProperties() and addUpdateProperties() added
  EntityDbPreparedConnection setParameterValues() call moved into executePreparedSelect/Update()
  EntityDbPreparedConnection refactored
  EntityDbRemoteAdapter.appendEntityCriteria() added, takes prepared statement usage into account when logging
  Property.ForeignKeyProperty.isMultipleColumnReference() renamed to isCompositeReference()
  JMinorServerMonitorTruststore added
  PropertyCriteria refactored
  EntityDbPreparedConnection merged into EntityDbConnection
  Criteria.asString() removed Database and ValueProvider parameters
  EntityDbConnection code cleanup/refactoring
  Database.getSQLDateString() removed
  Entity.Key single value constructor optimized for integer values
  Entity.Key.setAs() now sets the hashCode value instead of simply setting the hash code dirty flag
  FilteredComboBoxModel now contains the nullValueString, sort comparator guarantees it stays at the top
  ItemComboBoxModel sort comparator keeps null items at the top
  Property.hasDescription() added
  EntityUiUtil now only adds tool tips to components if description is provided
  EntityLookupField adds the lookup properties as default tool tip
  EntityKeyCriteria now always uses original key values