@@ -35,6 +35,12 @@ public interface EntityDb {
   boolean isConnected() throws Exception;
 
   /**
+   * Disconnects this connection
+   * @throws Exception in case of an exception
+   */
+  void disconnect() throws Exception;
+
+  /**
    * @throws Exception in case of exception
    * @return true if this db connection is valid
    */
